test/sema/typeck/trait/impl-method-where-clause-extra.dora
trait Foo {}
trait Baz {}

trait Bar {
    fn baz[T]();
}

class MyClass

impl Bar for MyClass {
    fn baz[T]() where T: Foo {}
}
